--- a/build.gradle
+++ b/build.gradle
@@ -2,10 +2,8 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.3.3'
     id 'io.spring.dependency-management' version '1.1.6'
+    id "io.freefair.lombok" version "8.10.2"
 }
-
-group = 'com.public.payments.manager'
-version = '0.0.1-SNAPSHOT'
 
 java {
     toolchain {
@@ -17,13 +15,43 @@ repositories {
     mavenCentral()
 }
 
+ext {
+    springBootVersion = '3.3.3'
+    springCloudVersion = '2023.0.3'
+    dependencyManagementVersion = '1.1.6'
+    aopVersion = "1.9.19"
+    hibernateValidatorVersion = '8.0.1.Final'
+    testcontainersVersion = '1.20.2'
+    jacksonVersion = '2.18.0'
+    javaxValidationVersion = '3.1.0'
+}
+
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.boot:spring-boot-dependencies:${springBootVersion}"
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+    }
+}
+
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'org.springframework.boot:spring-boot-testcontainers'
-    testImplementation 'org.testcontainers:junit-jupiter'
-    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation "org.aspectj:aspectjweaver:${aopVersion}"
+
+
+    implementation "com.fasterxml.jackson.core:jackson-core:${jacksonVersion}"
+    implementation "com.fasterxml.jackson.core:jackson-databind:${jacksonVersion}"
+    implementation "com.fasterxml.jackson.core:jackson-annotations:${jacksonVersion}"
+
+    implementation "jakarta.validation:jakarta.validation-api:${javaxValidationVersion}"
+    implementation "org.hibernate:hibernate-validator:${hibernateValidatorVersion}"
+
+    testImplementation('org.springframework.boot:spring-boot-starter-test') {
+        exclude group: 'org.junit.vintage'
+    }
+    testImplementation "org.testcontainers:testcontainers:${testcontainersVersion}"
+    testImplementation 'org.junit.jupiter:junit-jupiter'
 }
 
 tasks.named('test') {
